--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ bin/org/lessons/java/inheritance/Product.class
 bin/org/lessons/java/inheritance/Main.class
 .project
 .classpath
+bin/org/lessons/java/inheritance/Television.class
