--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ bin/org/lessons/java/inheritance/Television.class
 bin/org/lessons/java/inheritance/Headphones.class
 bin/org/lessons/java/inheritance/Headphones.class
 *.class
+bin/org/lessons/java/inheritance/Headphones.class
+*.class
